<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation" >

    <string name="app_name">MTKutility</string>

    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="back1">press back again to exit mtkutility</string>
    <string name="back2">closing MTKutility</string>

    <string name="nowrite">MTKutility needs write internal storage permission</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="noback">use the menu to navigate</string>
    <string name="selOne">Select One Name</string>
    <string name="selected">selected</string>
    <string name="created">created: </string>
    <string name="saved">settings have been saved</string>
    <string name="nosave">no changes to save</string>
    <string name="noSave">save failed</string>
    <string name="logFatal">create file %1$s failed</string>
    <string name="goMain">return to Main screen and connect logger</string>
    <string name="noLogRecs">MTK logger has 0 log records %1$s nothing to download</string>
    <string name="dlDone"> download is done</string>

    <string name="noCompat">not compatible</string>
    <string name="noBluetooth">your phone does not support Bluetooth</string>
    <string name="noLog">your GPS does not seem to log trackpoints - log download is not enabled</string>
    <string name="noAGPS">your GPS does not seem to Store EPO data - AGPS update is not enabled</string>
    <string name="wrongMode">recording mode must be \"stop when full\" - log download is not enabled</string>
    <string name="noPaired">no paired devices found</string>
    <string name="noGPSselected">GPS logger has not been selected</string>
    <string name="noConnect">unable to connect to your GPS logger</string>
    <string name="connecting">Connecting to your GPS logger</string>
    <string name="connected">disConnect</string>
    <string name="disconnected">Connect</string>
    <string name="GPSconnected">is connected</string>
    <string name="GPSdisconnected">%s is disconnected</string>
    <string name="working">working on that... please wait</string>
    <string name="getSetngs">reading settings... please wait</string>
    <string name="intializing">starting... please wait</string>
    <string name="restored">default settings restored</string>

    <string name="fatalErr">fatal error: %s</string>
    <string name="crashLog">MTKutility failed - please send the trace file. Thank You.</string>
    <string name="errortext">The attached log file contains information about your phone, a log
        of the code executed before MTKutility failed, and a system trace report for the failure.
        \nThanks for sending this.\nAl Tauber</string>
    <string name="emailtext">The attached log file contains information about your phone, GPS logger,
        and a log of the code executed. Please add any comments you would like to direct to me and
        indicate if you would like a response to the email. Thanks for sending this.
        \nAl Tauber</string>
    <string name="myEmail">adt.androidapps@gmail.com</string>
    <string name="emailMsg">Pick an Email provider</string>
    <string name="erased">GPS log has been formatted</string>

    <string name="desc_list_item_icon">Item Icon</string>
    <string name="setGPS">set Logger</string>
    <string name="slctGPS">Select your GPS logger</string>
    <string name="noGPSsel">not selected</string>
    <string name="allowInsecure">allow insecure\nconnect</string>
    <string name="allowInsecureWide">allow insecure connect</string>
    <string name="txNMEAinp">set display frequeny</string>
    <string name="txtRS">reset</string>
    <string name="txtRSdone">reset completed</string>
    <string name="epoDone">AGPS data update is done</string>
    <string name="blkOf">blocks of</string>

    <string name="btnSave">Save Settings</string>
    <string name="btnFTPsel">Select FTP URL</string>
    <string name="btnFTPadd">Add FTP Site</string>
    <string name="btnEPOdl">Download AGPS file</string>
    <string name="btnConnect">Connect</string>
    <string name="btnUpdtEPO">Update AGPS data</string>
    <string name="btnResetEPO">Clear AGPS data</string>
    <string name="btngetEPOfile">find EPO file</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_pause">Pause Log</string>
    <string name="btnNMEAdflt">Default NMEA</string>
    <string name="btnCold">cold</string>
    <string name="btnWarm">warm</string>
    <string name="btnHot">hot</string>
    <string name="btnFactory">factory</string>
    <string name="btnErase">Erase GPS Records</string>
    <string name="btnDlL">Download Log</string>
    <string name="btnDNLDepo">Download EPO file</string>
    <string name="btnAPNDepo">Append EPO file</string>
    <string name="btnChkDl">Check Download</string>
    <string name="btnBfile">Select BIN File</string>
    <string name="btnBcvrt">Create GPX File</string>
    <string name="btnEfile">Select EPO File</string>
    <string name="btnAfile">Select log File</string>
    <string name="btnLfile">Select Local File</string>

    <string name="BfileTxt">select a binary file</string>
    <string name="oneTrack">write one track</string>
    <string name="epo60">60 byte EPO SET</string>
    <string name="epo72">72 byte EPO SET</string>
    <string name="badEPO">invalid EPO file</string>

    <string name="nav_home">Home</string>
    <string name="nav_getlog">Download Log</string>
    <string name="nav_makegpx">Make GPX file</string>
    <string name="nav_getepo">Get EPO File</string>
    <string name="nav_checkepo">Check EPO File</string>
    <string name="nav_updtagps">Update AGPS</string>
    <string name="nav_settings">Update Settings</string>
    <string name="nav_email">Send App Log</string>
    <string name="nav_help">Help</string>
    <string name="nav_about">About</string>
    <string name="nav_exit">Exit</string>

    <string name="NMEAsettings"></string>
    <string name="appVersion">app version</string>

    <string name="aFTPid">File type - 60/70/both</string>
    <string name="aFTPdesc">Tag for selection list</string>
    <string name="mFTP_IP">FTP IP or URL</string>
    <string name="mFTP_port">port #</string>
    <string name="mFTP_userid">FTP userid</string>
    <string name="mFTP_pswd">password</string>
    <string name="mFTP_file">EPO file name</string>
    <string name="mLCL_file">local file name</string>
    <string name="FTPhdr">FTP Download</string>
    <string name="HTPhdr">HTTP Download</string>


    <string name="tvByTime">by time</string>
    <string name="tvByDist">by distance</string>
    <string name="tvSpdOvr">speed over</string>
    <string name="txvByT">Sec.</string>
    <string name="txvByD">meters</string>
    <string name="txvByS">km/h</string>
    <string name="txvAul">Recording frequency</string>

    <!-- preferences screen -->
    <string name="fonts">Screen Font Preferences</string>
    <string name="homeFont">Home screen font</string>
    <string name="setBtns">Settings screen buttons font</string>
    <string name="setHtml">Settings screen table font</string>
    <string name="AGPSsize">AGPS memory size - days</string>
    <string name="debugPref">log trace level</string>
    <string name="cmdTimeOut">MTK command timeout</string>
    <string name="cmdRetries">MTK command retries</string>
    <string name="disNmeaDown">Disable NMEA when downloading</string>
    <string name="disLogDown">Disable GPS logging when downloading</string>

    <!-- contentDescription names -->
    <string name="getEPOimage">getEPOimage</string>
    <string name="getLogimage">getLogimage</string>
</resources>
