<?xml version="1.0" encoding="utf-8"?>
<!--
 * @author Alex Tauber
 *
 * This file is part of the open source Android app MTKutility2. You can redistribute it and/or
 * modify it under the terms of the GNU General Public License as published by the Free Software
 * Foundation, version 3 of the License. This extends to files included that were authored by
 * others and modified to make them suitable for this app. All files included were subject to
 * open source licensing.
 *
 * MTKutility2 is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
 * without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 * See the GNU General Public License for more details. You can review a copy of the
 * GNU General Public License at http://www.gnu.org/licenses.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/fonts"
        android:key="fonts">

        <EditTextPreference
            android:defaultValue="13"
            android:key="homeFont"
            android:summary=""
            android:title="@string/homeFont" />

        <EditTextPreference
            android:defaultValue="13"
            android:key="setBtns"
            android:summary=""
            android:title="@string/setBtns" />

        <EditTextPreference
            android:defaultValue="13"
            android:key="setHtml"
            android:summary=""
            android:title="@string/setHtml" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Misc settings" android:key="Misc settings">

        <EditTextPreference
            android:defaultValue="7"
            android:key="AGPSsize"
            android:summary=""
            android:title="@string/AGPSsize" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/debugValue"
            android:entryValues="@array/debugReturn"
            android:key="debugPref"
            android:summary="@string/debugPref"
            android:title="@string/debugPref" />

        <EditTextPreference
            android:defaultValue="30"
            android:key="cmdTimeOut"
            android:summary=""
            android:title="@string/cmdTimeOut" />

        <EditTextPreference
            android:defaultValue="2"
            android:key="cmdRetries"
            android:summary=""
            android:title="@string/cmdRetries" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="disNmeaDown"
            android:summary=""
            android:title="@string/disNmeaDown"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="disLogDown"
            android:summary=""
            android:title="@string/disLogDown"/>
			
        <ListPreference
            android:defaultValue="2048"
            android:key="downBlockSize"
            android:title="Download Block Size"
            android:entries="@array/listBlockSizeShow"
            android:entryValues="@array/listBlockSizeReturn"/>

    </PreferenceCategory>
</PreferenceScreen>