<?xml version="1.0" encoding="utf-8"?><!--
 * @author Alex Tauber
 *
 * This file is part of the open source Android app mtkutility. You can redistribute it and/or
 * modify it under the terms of the GNU General Public License as published by the Free Software
 * Foundation, version 3 of the License. This extends to files included that were authored by
 * others and modified to make them suitable for this app. All files included were subject to
 * open source licensing.
 *
 * mtkutility is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
 * without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 * See the GNU General Public License for more details. You can review a copy of the
 * GNU General Public License at http://www.gnu.org/licenses.
-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="#FFFFFF"
    tools:context=".GetLogFragment">

    <ImageView
        android:id="@+id/ic_getepo"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginTop="10sp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/getEPOimage"
        android:scaleType="fitXY"
        android:src="@drawable/ic_getepo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tbla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_border"
        app:layout_constraintTop_toBottomOf="@+id/ic_getepo">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FTPhdr"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/FTPip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="@string/mFTP_IP"
                android:minHeight="1dp"
                android:text="@string/mFTP_IP"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                android:id="@+id/FTPuser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:hint="@string/mFTP_userid"
                android:minHeight="1dp"
                android:text="@string/mFTP_userid"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/FTPpswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/mFTP_pswd"
                android:minHeight="1dp"
                android:text="@string/mFTP_pswd"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btnFTPsel"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="1dp"
                android:text="@string/btnFTPsel"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnFTPsave"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="1dp"
                android:text="@string/btnSave"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnFTPadd"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="1dp"
                android:text="@string/btnFTPadd"
                android:textSize="15sp" />
        </LinearLayout>

    </TableLayout>

    <TableLayout
        android:id="@+id/tblb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_border"
        app:layout_constraintTop_toBottomOf="@+id/tbla">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btnFTPfile"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="1dp"
                android:text="@string/btnEfile"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnLCLfile"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="1dp"
                android:text="@string/btnLfile"
                android:textSize="15sp" />
        </LinearLayout>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/FTPfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:minHeight="1dp"
                android:text="@string/mFTP_file"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/LCLfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:minHeight="1dp"
                android:text="@string/mLCL_file"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btnFTPapnd"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="1dp"
                android:text="@string/btnAPNDepo"
                android:textSize="15sp"
                app:layout_constraintLeft_toRightOf="@+id/btnFTPfile" />

            <Button
                android:id="@+id/btnFTPdnld"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="1dp"
                android:text="@string/btnDNLDepo"
                android:textSize="15sp"
                app:layout_constraintLeft_toRightOf="@+id/btnFTPapnd" />
        </LinearLayout>

    </TableLayout>


    <TableLayout
        android:id="@+id/tblc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_border"
        app:layout_constraintTop_toBottomOf="@+id/tblb">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/HTPhdr"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/HTPurl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="1dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btnHTPsave"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="1dp"
                android:text="@string/btnSave" />

            <Button
                android:id="@+id/btnHTPdnld"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="1dp"
                android:text="@string/btnDNLDepo" />
        </LinearLayout>
    </TableLayout>

    <Button
        android:id="@+id/btnChkDl"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="1dp"
        android:text="@string/btnChkDl"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tblc" />

</android.support.constraint.ConstraintLayout><!--android:minWidth="1dp"--><!--android:minHeight="1dp"-->
