<?xml version="1.0" encoding="utf-8"?><!--
 * @author Alex Tauber
 *
 * This file is part of the open source Android app mtkutility. You can redistribute it and/or
 * modify it under the terms of the GNU General Public License as published by the Free Software
 * Foundation, version 3 of the License. This extends to files included that were authored by
 * others and modified to make them suitable for this app. All files included were subject to
 * open source licensing.
 *
 * mtkutility is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
 * without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 * See the GNU General Public License for more details. You can review a copy of the
 * GNU General Public License at http://www.gnu.org/licenses.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <EditText
                android:id="@+id/aFTPdesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/aFTPdesc"
                android:minHeight="1dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/aFTPip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mFTP_IP"
                android:minHeight="1dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <EditText
                android:id="@+id/aFTPuser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/mFTP_userid"
                android:minHeight="1dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/aFTPpswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/mFTP_pswd"
                android:minHeight="1dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>
    </TableLayout>
</LinearLayout>
